Fix horizontal scrollbar.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -717,7 +717,7 @@ span.badge-nightly {
 .nav-header ul{
 	position:relative;
 	display:flex;
-	width:100%;
+	/*width:100%;*/
 	margin:auto;
 	padding:0;
 	list-style:none;
